[Qt] Fix build for WK2, do not use enum type if values can be outside the enum https://bugs.webkit.org/show_bug.cgi?id=79800

Reviewed by Csaba Osztrogonác.

We have two different enums called NavigationRequestAction. If we use one of them
to store the variables, compilers can rightfully warn about comparison with
values from other enums.

We might revisit the strategy of exposing different enumerations in experimental,
but for now, fallback to using int for the 'action' property in
QWebNavigationRequest.

* UIProcess/API/qt/qwebnavigationrequest.cpp:
(QWebNavigationRequestPrivate):
(QWebNavigationRequest::setAction):
(QWebNavigationRequest::action):
* UIProcess/API/qt/qwebnavigationrequest_p.h:
* UIProcess/API/qt/tests/publicapi/tst_publicapi.cpp:

Canonical link: https://commits.webkit.org/96874@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109113 268f45cc-cd09-0410-ab3c-d52691b4dbfc