third_party/WebKit/Source/WebKit2/UIProcess/API/qt/qwebnavigationrequest.cpp
@@ -42,7 +42,7 @@ public:
     QUrl url;
     Qt::MouseButton mouseButton;
     Qt::KeyboardModifiers keyboardModifiers;
-    QQuickWebView::NavigationRequestAction action;
+    int action;
     QQuickWebView::NavigationType navigationType;
 };
 
@@ -57,7 +57,7 @@ QWebNavigationRequest::~QWebNavigationRequest()
     delete d;
 }
 
-void QWebNavigationRequest::setAction(QQuickWebView::NavigationRequestAction action)
+void QWebNavigationRequest::setAction(int action)
 {
     if (d->action == action)
         return;
@@ -81,7 +81,7 @@ int QWebNavigationRequest::keyboardModifiers() const
     return int(d->keyboardModifiers);
 }
 
-QQuickWebView::NavigationRequestAction QWebNavigationRequest::action() const
+int QWebNavigationRequest::action() const
 {
     return d->action;
 }
